--- a/merchant-reception/specs/apis/order/create.yaml
+++ b/merchant-reception/specs/apis/order/create.yaml
@@ -1,15 +1,23 @@
 post:
+  summary: "create a new retail order"
   operationId: "createOrder"
+  requestBody:
+    description: "request body of a new order"
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: "../../components/schemas/order/CreateOrderRequest.yaml"
   responses:
     "200":
       description: "order creation success"
       content:
         application/json:
           schema:
-            $ref: "../../components/schemas/SuccessResponse.yaml"
+            $ref: "../../components/schemas/response/SuccessResponse.yaml"
     default:
       description: "unexpected order creation error"
       content:
         application/json:
           schema:
-            $ref: "../../components/schemas/ErrorResponse.yaml"
+            $ref: "../../components/schemas/response/ErrorResponse.yaml"
