--- a/merchant-reception/specs/components/schemas/order/Attribute.yaml
+++ b/merchant-reception/specs/components/schemas/order/Attribute.yaml
@@ -4,7 +4,10 @@ properties:
   id:
     type: integer
     format: int64
+    example: 1
   name:
     type: string
+    example: "サイズ"
   value:
     type: string
+    example: "S"
