--- a/merchant-reception/specs/components/schemas/order/Delivery.yaml
+++ b/merchant-reception/specs/components/schemas/order/Delivery.yaml
@@ -7,6 +7,8 @@ properties:
       - immediate
       - specified
       - reserved
+    example: "immediate"
   addressId:
     type: integer
     format: int32
+    example: 1
