--- a/merchant-reception/specs/components/schemas/order/Item.yaml
+++ b/merchant-reception/specs/components/schemas/order/Item.yaml
@@ -1,22 +1,36 @@
 title: Item
 type: object
+description: 商品情報
 properties:
   id:
+    description: 商品ID
     type: integer
     format: int64
     example: 1
+    minimum: 1
+    maximum: 9999999999
   name:
+    description: 商品名
     type: string
     example: "消しゴム"
+    minLength: 1
+    maxLength: 250
   price:
+    description: 商品価格
     type: integer
     format: int32
     example: 150
+    minimum: 0
+    maximum: 9999999999
   attributes:
+    description: 商品属性
     type: array
     items:
       $ref: "./Attribute.yaml"
   quantity:
+    description: 購入数量
     type: integer
     format: int32
     example: 1
+    minimum: 1
+    maximum: 9999999999
