--- a/merchant-reception/specs/components/schemas/order/Shop.yaml
+++ b/merchant-reception/specs/components/schemas/order/Shop.yaml
@@ -1,7 +1,11 @@
 title: Shop
 type: object
+description: 注文店舗情報
 properties:
   id:
+    description: 店舗ID
     type: integer
     format: int64
     example: 1
+    minimum: 1
+    maximum: 9999999999
