--- a/merchant-reception/specs/components/schemas/response/SuccessResponse.yaml
+++ b/merchant-reception/specs/components/schemas/response/SuccessResponse.yaml
@@ -2,7 +2,10 @@ title: SuccessResponse
 type: object
 properties:
   code:
+    description: "成功コード"
     type: string
+    minLength: 1
     maxLength: 20
+    example: "SUCCESS"
 required:
   - code
