fix log level for ExceptionHandlerExceptionResolver

--- a/merchant-reception/src/main/resources/application.yaml
+++ b/merchant-reception/src/main/resources/application.yaml
@@ -4,3 +4,6 @@ spring:
       enabled: true
     restart:
       enabled: true
+logging:
+  level:
+    org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: OFF
