comment root DEBUG log

--- a/merchant-reception/src/main/resources/application.yaml
+++ b/merchant-reception/src/main/resources/application.yaml
@@ -6,4 +6,5 @@ spring:
       enabled: true
 logging:
   level:
+    #    root: DEBUG
     org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: OFF
