--- a/order-processing/src/main/resources/application.yaml
+++ b/order-processing/src/main/resources/application.yaml
@@ -3,4 +3,4 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&serverTimezone=SERVER&allowMultiQueries=true
     username: root
-    password: password
+    password: root
