git submodule ignore dirty

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "order-reception/grpc-interface"]
 	path = order-reception/grpc-interface
 	url = git@github.com:tetsuya-azami/grpc-interface.git
+        ignore = dirty
 [submodule "order-processing/grpc-interface"]
 	path = order-processing/grpc-interface
 	url = git@github.com:tetsuya-azami/grpc-interface.git
+        ignore = dirty
