--- a/order-reception/src/main/resources/application.yaml
+++ b/order-reception/src/main/resources/application.yaml
@@ -1,4 +1,9 @@
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3307/test?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&serverTimezone=SERVER&allowMultiQueries=true
+    username: root
+    password: root
   devtools:
     livereload:
       enabled: true
