--- a/order-reception/src/main/resources/application.yaml
+++ b/order-reception/src/main/resources/application.yaml
@@ -13,3 +13,9 @@ logging:
   level:
     #    root: DEBUG
     org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: OFF
+    com:
+      example:
+        orderreception:
+          infrastructure:
+            mapper:
+              generated: DEBUG
