--- a/order-reception/src/main/resources/application.yaml
+++ b/order-reception/src/main/resources/application.yaml
@@ -19,3 +19,10 @@ logging:
           infrastructure:
             mapper:
               generated: DEBUG
+grpc:
+  client:
+    orderProcessingGrpcClient:
+      address: 'static://127.0.0.1:9090'
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
