--- a/order-reception/src/main/resources/application.yaml
+++ b/order-reception/src/main/resources/application.yaml
@@ -19,4 +19,6 @@ grpc:
       address: 'static://127.0.0.1:9090'
       enableKeepAlive: true
       keepAliveWithoutCalls: true
-      negotiationType: plaintext
+      negotiationType: TLS
+      security:
+        trustCertCollection: './tls/ca.pem'
